--- a/charts/core/templates/deployment.yaml
+++ b/charts/core/templates/deployment.yaml
@@ -4,6 +4,7 @@ metadata:
   name: {{ include "core.fullname" . }}
   labels:
     {{- include "core.labels" . | nindent 4 }}
+    product: {{ .Values.product }}
 spec:
   {{- if not .Values.autoscaling.enabled }}
   replicas: {{ .Values.replicaCount }}
