--- a/applicationsSets/appset.yaml
+++ b/applicationsSets/appset.yaml
@@ -51,6 +51,9 @@ spec:
             - '../../environments/{{name}}/defaults.yaml'  # Global defaults
             # - '../../environments/{{name}}/region-{{region}}.yaml'  # Regional overrides
             - '../../environments/{{name}}/{{subenv}}/values.yaml'  # Instance-specific overrides
+          parameters:
+            - name: "argocd-source-hash"
+              value: "{{`{{ .Values | toJson | sha256sum }}`}}"
       destination:
         server: https://kubernetes.default.svc
         namespace: '{{namespace}}'
