--- a/applicationsSets/argocd.yaml
+++ b/applicationsSets/argocd.yaml
@@ -6,9 +6,9 @@ metadata:
 spec:
   project: default
   source:
-    repoURL: https://github.com/galregev-ops/gitops-example-repo.git
+    repoURL: https://argoproj.github.io/argo-helm
     chart: argo-cd
-    targetRevision: 6.7.6  # Use a stable version
+    targetRevision: 6.7.6
     helm:
       valueFiles:
         - environments/argocd-values.yaml
