--- a/environments/argocd-values.yaml
+++ b/environments/argocd-values.yaml
@@ -8,22 +8,22 @@
 #   cm:
 #     # application.instanceLabelKey: argocd.argoproj.io/instance
 
-# server:
+server:
 
-#   autoscaling:
-#     enabled: true
-#     minReplicas: 1
+  # autoscaling:
+  #   enabled: true
+  #   minReplicas: 1
 
-#   extraArgs:
-#     - --insecure
-#   ingress:
-#     enabled: false
-#     # annotations:
-#     #   kubernetes.io/ingress.class: alb
-#     # hosts:
-#     #   - argocd.example.com
+  extraArgs:
+    - --insecure
+  ingress:
+    enabled: false
+    # annotations:
+    #   kubernetes.io/ingress.class: alb
+    # hosts:
+    #   - argocd.example.com
 
-# ## Custom resource configuration
-# crds:
-#   # -- Install and upgrade CRDs
-#   install: true
+## Custom resource configuration
+crds:
+  # -- Install and upgrade CRDs
+  install: true
