--- a/environments/argocd-values.yaml
+++ b/environments/argocd-values.yaml
@@ -1,9 +1,9 @@
 # global:
 #   # domain: localhost:8080
 
-# configs:
-#   params:
-#     server.insecure: true
+configs:
+  params:
+    server.insecure: false
 
 #   cm:
 #     # application.instanceLabelKey: argocd.argoproj.io/instance
@@ -14,8 +14,8 @@ server:
   #   enabled: true
   #   minReplicas: 1
 
-  extraArgs:
-    - --insecure
+  # extraArgs:
+  #   - --insecure
   ingress:
     enabled: false
     # annotations:
