--- a/applicationsSets/argocd.yaml
+++ b/applicationsSets/argocd.yaml
@@ -1,24 +1,23 @@
-# apiVersion: argoproj.io/v1alpha1
-# kind: Application
-# metadata:
-#   name: argocd
-#   namespace: argocd
-# spec:
-#   project: default
-#   source:
-#     repoURL: https://argoproj.github.io/argo-helm
-#     chart: argo-cd
-#     targetRevision: 6.7.6
-#     helm:
-#       helmOptions:
-#         - "--values"
-#         - "environments/argocd-values.yaml"
-#   destination:
-#     server: https://kubernetes.default.svc
-#     namespace: argocd
-#   syncPolicy:
-#     automated:
-#       prune: true
-#       selfHeal: true
-#     syncOptions:
-#       - CreateNamespace=true
+apiVersion: argoproj.io/v1alpha1
+kind: Application
+metadata:
+  name: argocd
+  namespace: argocd
+spec:
+  project: default
+  source:
+    repoURL: https://github.com/galregev-ops/gitops-example-repo.git
+    targetRevision: main
+    path: charts/argocd
+    helm:
+      valueFiles:
+        - values.yaml
+  destination:
+    server: https://kubernetes.default.svc
+    namespace: argocd
+  syncPolicy:
+    automated:
+      prune: true
+      selfHeal: true
+    syncOptions:
+      - CreateNamespace=true
