--- a/charts/core/values.yaml
+++ b/charts/core/values.yaml
@@ -121,3 +121,11 @@ nodeSelector: {}
 tolerations: []
 
 affinity: {}
+
+env:
+  - name: DATABASE_URL
+    value: "postgres://user:password@db:5432/core"
+  - name: REDIS_URL
+    value: "redis://redis-master:6379"
+  - name: LOG_LEVEL
+    value: "info"
