--- a/applicationsSets/appset.yaml
+++ b/applicationsSets/appset.yaml
@@ -14,7 +14,7 @@ spec:
     metadata:
       name: "{{path[1]}}-{{path[2]}}"
     spec:
-      project: microservices
+      project: default
       source:
         repoURL: https://github.com/galregev-ops/gitops-example-repo.git
         targetRevision: main
